--- a/07-sample_estimates.Rmd
+++ b/07-sample_estimates.Rmd
@@ -1,7 +1,19 @@
 
-# Effect size estimates from published articles
+# Effect sizes from publications
 
-In this section we focus on obtaining effect size estimates (e.g., correlation or standardized mean difference) from published articles. Often studies do not report effect sizes (e.g., $d$-values) or if they do, they don't report the confidence interval for that effect. We will learn more about confidence intervals in a future chapter, but for now, think of a confidence interval for a study/sample effect (e.g., $d$-value) as providing a plausible range of values for the population parameter (e.g., $\delta$). Below we learn the R commands needed to obtain effect sizes with confidence intervals from published articles.
+## Required
+
+The following CRAN packages must be installed:
+
+| Required CRAN Packages |
+|-------------------|
+|MBESS              |
+|cocor              |
+ 
+
+## Objective
+
+In this chapter we focus on obtaining effect size estimates (e.g., correlation or standardized mean difference) from published articles. Often studies do not report effect sizes (e.g., $d$-values) or if they do, they don't report the confidence interval for that effect. We will learn more about confidence intervals in a future chapter, but for now, think of a confidence interval for a study/sample effect (e.g., $d$-value) as providing a plausible range of values for the population parameter (e.g., $\delta$). Below we learn the R commands needed to obtain effect sizes with confidence intervals from published articles.
 
 The ability to obtain effect size estimate from articles will be come extraordinarily important later in the course. Specifically, when it is time to engage in sample size planning (e.g., for your thesis) you will need to obtain estimates of the effects you are interested in from past research. The commands in this chapter will help you to do so.
 
@@ -255,31 +267,27 @@ In this repeated measures design the population effect ($\delta$) is unknown but
 
 #### Using repeated measures $t$-value
 
+Scenario: A researcher reports a repeated-measures but does not report a d-value, mean difference with SD, or even the sample size. He does, however, report that t(40) = 6.23. The 95% confidence interval for this $d$-value (i.e., standardized mean difference) can be obtained with the command below.
 
 $$
 \begin{aligned}
-df &= n - 1
-&= 200 - 1
-&= 199
+df &= N - 1 \\
+40 &= N - 1\\
+40 + 1 &= N\\
+41 &= N
 \end{aligned}
 $$
 
-$$
-\begin{aligned}
-n  &= df + 1
-&= 199 + 1
-&= 200
-\end{aligned}
-$$
+We can use the N and $t$-value to calculate the $d$-value and CI using the command:
 
 ```{r}
 # t-value for repeated measures if 
 library(MBESS)
-ci.sm(ncp = 8.23, N = 200)
+ci.sm(ncp = 6.23, N = 41)
 ```
 
 
-
+In this repeated measures design the population effect ($\delta$) is unknown but our sample estimate of weight loss is $d$ = 0.97, 95% CI [0.60, 1.34]. This $d$-value will differ from the population effect ($\delta$) due to sampling error. The confidence interval indicates that a plausible range for $\delta$ is 0.60 to 1.34.
 
 
 ## Estimating $\rho$
@@ -293,7 +301,7 @@ library(MBESS)
 ci.cc(r = .40, n = 200)
 ```
 
-From this output you see that $r$ = .40, 95%  CI [.28, .51]. The population effect ($\rho$) is unknown but our sample estimate the population correlation is $r = .30$, 95% CI [.28, .51]. This sample correlation will differ from the population correlation ($\rho$) due to sampling error. The confidence interval indicates that a plausible range for $\rho$ is .28 to .51.
+From this output you see that $r$ = .40, 95%  CI [.28, .51]. The population effect ($\rho$) is unknown but our sample estimate of the population correlation is $r = .30$, 95% CI [.28, .51]. This sample correlation will differ from the population correlation ($\rho$) due to sampling error. The confidence interval indicates that a plausible range for $\rho$ is .28 to .51.
 
 ### Difference between two correlations
 
