--- a/19-tools.Rmd
+++ b/19-tools.Rmd
@@ -1,6 +1,24 @@
-# Research Tools
+# Next Step Resources
 
-## Next steps: R books
+## Writing articles
+
+I suggest you check out [Writing Empirical Articles: Transparency, Reproducibility, Clarity, and Memorability](https://doi.org/10.1177%2F2515245918754485) for excellent advice on writing articles (pictured below). Conversely, I suggest you AVOID "Writing the Empirical Journal Article" by Daryl Bem because this article has been described by some as a "how to guide" for p-hacking (i.e., finding the prettiest path in the garden of forking analysis paths).
+
+```{r, out.width="50%", echo=FALSE}
+knitr::include_graphics("images/gernsbacher.png")
+```
+
+## Statistics books
+
+* [Designing Experiments and Analyzing Data: A Model Comparison Perspective, Third Edition](https://www.amazon.ca/Designing-Experiments-Analyzing-Data-Perspective/dp/1138892289/ref=sr_1_1?dchild=1&qid=1629119503&refinements=p_27%3AKen+Kelley&s=books&sr=1-1&text=Ken+Kelley) by Maxwell, Delaney, and Kelley. This book has a fantastic website ([https://designingexperiments.com](https://designingexperiments.com)) with online tools and R scripts. 
+
+* [Applied Multiple Regression/Correlation Analysis for the Behavioral Sciences](https://www.amazon.ca/Multiple-Regression-Correlation-Analysis-Behavioral/dp/0805822232) by Cohen, Cohen, West, and Aiken. This is the "go to" resource if you are conducting moderated multiple regression. A great book on regression beyond just moderation though.
+
+* [Serious Stats: A guide to advanced statistics for the behavioral sciences](https://www.amazon.ca/Serious-Stats-advanced-statistics-behavioral/dp/0230577180/ref=sr_1_1?dchild=1&keywords=serious+stats&qid=1629126084&sr=8-1) by Baguley. The book title tells you everything you need to know about this one.
+
+* [PROCESS book and macro](https://processmacro.org/index.html). From the website: "PROCESS is an observed variable OLS and logistic regression path analysis modeling tool. It is widely used through the social, business, and health sciences for estimating direct and indirect effects in single and multiple mediator models (parallel and serial) , two and three way interactions in moderation models along with simple slopes and regions of significance for probing interactions, and conditional indirect effects in moderated mediation models with a single or multiple mediators or moderators.  The use of PROCESS is described and documented in Introduction to Mediation, Moderation, and Conditional Process Analysis, published by The Guilford Press.  PROCESS was written by Andrew F. Hayes."
+
+## R books
 
 There are many R books out there. I believe that you will find these most helpful:
 
@@ -13,20 +31,56 @@ There are many R books out there. I believe that you will find these most helpfu
 * [Art of R Programming](https://nostarch.com/artofr.htm) by Matloff.
 
 
-## Next steps: Statistics books
+## R packages
 
-* [Designing Experiments and Analyzing Data: A Model Comparison Perspective, Third Edition](https://www.amazon.ca/Designing-Experiments-Analyzing-Data-Perspective/dp/1138892289/ref=sr_1_1?dchild=1&qid=1629119503&refinements=p_27%3AKen+Kelley&s=books&sr=1-1&text=Ken+Kelley) by Maxwell, Delaney, and Kelley. This book has a fantastic website ([https://designingexperiments.com](https://designingexperiments.com)) with online tools and R scripts. 
+### rmarkdown / bookdown
 
-* [Applied Multiple Regression/Correlation Analysis for the Behavioral Sciences](https://www.amazon.ca/Multiple-Regression-Correlation-Analysis-Behavioral/dp/0805822232) by Cohen, Cohen, West, and Aiken. This is the "go to" resource is you are conducting moderated multiple regression. A great book on regression beyond just moderation though.
+One approach to avoiding errors in your article/thesis is to create a dynamic document. In this type of document you do not type the numbers into the document. Rather the document contains your analysis script (hidden from readers) and it inserts the calculated values into the text of the document. The exciting part of this type of document is that a single rmarkdown document and produce a number output formats such as PDF, Word, Power Point, HTML - as illustrated in the diagram below.
+
+```{r, echo = FALSE, out.width = "60%", cap = "apaTables paper header"}
+knitr::include_graphics("ch_tools/images/rmarkdown_docs.png")
+```
 
 
-## Writing articles
+You can learn more about rmarkdown in this [video](https://vimeo.com/178485416). I suggest you read the official [documentation](https://rmarkdown.rstudio.com/lesson-1.html) to get started. Incidently, the PDF course assignments are made with rmardown - as well as this website!
+
+Some other great resources:
+
+* [R Markdown: The Definitive Guide](https://bookdown.org/yihui/rmarkdown/) by Xie, Allaire, and Grolemund. Free.
+
+* [R Markdown Cookbook](https://bookdown.org/yihui/rmarkdown-cookbook/) by Xie, Dervieux, and Riederer. Free.
+
+* [bookdown: Authoring Books and Technical Documents with R Markdow](https://bookdown.org/yihui/bookdown/) by Xie. Free.
 
 
-I suggest you check out [Writing Empirical Articles: Transparency, Reproducibility, Clarity, and Memorability](https://doi.org/10.1177%2F2515245918754485) for excellent advice on writing articles (pictured below). Conversely, I suggest you AVOID "Writing the Empirical Journal Article" by Daryl Bem because this article has been described by some as a "how to guide" for p-hacking (i.e., finding the prettiest path in the garden of forking analysis paths).
+### papaja
 
-```{r, out.width="50%", echo=FALSE}
-knitr::include_graphics("images/gernsbacher.png")
+You may also find the [papaja package](https://github.com/crsh/papaja) helpful - and an easy way to use rmarkdown. It is a based on the rmarkdown extension called bookdown. This package is specifically designed to make it easy to use rmarkdown/bookdown to maka an APA style paper. Indeed that's the basis for the odd package name: **Preparing APA Journal Articles** (papaja).
+
+I suggest you read the extensive papaja (documentation)[https://crsh.github.io/papaja_man/introduction.html]. It will be worth your while!
+
+The only slight complication with papaja is the fact it is not on the CRAN and can't be installed in the usual way. But it's still straight forward. You can install papaja with the commands below - taken from the papaja website.
+
+```{r, eval = FALSE}
+# Install devtools package if necessary
+if(!"devtools" %in% rownames(installed.packages())) install.packages("devtools")
+
+# Install the stable development verions from GitHub
+devtools::install_github("crsh/papaja")
+```
+
+Indeed, once papaja is installed - you simply have to select the APA template before you enter your rmarkdown, as illustrated below:
+
+```{r, echo = FALSE, out.width = "60%", cap = "apaTables paper header"}
+knitr::include_graphics("ch_tools/images/papaja_template.png")
+```
+
+### apaTables
+
+If you don't want to learn rmarkdown you may find the [apaTables](https://cran.r-project.org/package=apaTables) package useful - it can easily create the most commonly used APA tables formatted for Microsoft Word. The [documentation](https://dstanley4.github.io/apaTables/articles/apaTables.html) has extensive examples.  You can also see the published guide by @stanley2018reproducible.
+
+```{r, echo = FALSE, out.width = "60%", cap = "apaTables paper header"}
+knitr::include_graphics("ch_tools/images/apaTables_paper.png")
 ```
 
 ## OSF
@@ -82,55 +136,6 @@ knitr::include_graphics("ch_tools/images/statcheck_process.png")
 
 Although there were some initial concerns about the validity of statcheck, subsequent [research](https://psyarxiv.com/tcxaj/download?format=pdf) on the package indicates an impressive validity level of roughly 90% (or a little higher/lower depending on the settings used). Indeed, in July of 2016, the journal *Psychological Science* started using statcheck on all submitted manuscripts - once they based an initial screen. Journal editor, Stephen Lindsey, [reports](https://www.nature.com/news/stat-checking-software-stirs-up-psychology-1.21049) there has been little resistance to doing so "Reaction has been almost non-existent."
 
-## rmarkdown / bookdown
-
-One approach to avoiding errors in your article/thesis is to create a dynamic document. In this type of document you do not type the numbers into the document. Rather the document contains your analysis script (hidden from readers) and it inserts the calculated values into the text of the document. The exciting part of this type of document is that a single rmarkdown document and produce a number output formats such as PDF, Word, Power Point, HTML - as illustrated in the diagram below.
-
-```{r, echo = FALSE, out.width = "60%", cap = "apaTables paper header"}
-knitr::include_graphics("ch_tools/images/rmarkdown_docs.png")
-```
-
-
-You can learn more about rmarkdown in this [video](https://vimeo.com/178485416). I suggest you read the official [documentation](https://rmarkdown.rstudio.com/lesson-1.html) to get started. Incidently, the PDF course assignments are made with rmardown - as well as this website!
-
-Some other great resources:
-
-* [R Markdown: The Definitive Guide](https://bookdown.org/yihui/rmarkdown/)
-
-* [R Markdown Cookbook](https://bookdown.org/yihui/rmarkdown-cookbook/)
-
-* [bookdown: Authoring Books and Technical Documents with R Markdow](https://bookdown.org/yihui/bookdown/)
-
-
-## papaja
-
-You may also find the [papaja package](https://github.com/crsh/papaja) helpful - and an easy way to use rmarkdown. It is a based on the rmarkdown extension called bookdown. This package is specifically designed to make it easy to use rmarkdown/bookdown to maka an APA style paper. Indeed that's the basis for the odd package name: **Preparing APA Journal Articles** (papaja).
-
-I suggest you read the extensive papaja (documentation)[https://crsh.github.io/papaja_man/introduction.html]. It will be worth your while!
-
-The only slight complication with papaja is the fact it is not on the CRAN and can't be installed in the usual way. But it's still straight forward. You can install papaja with the commands below - taken from the papaja website.
-
-```{r, eval = FALSE}
-# Install devtools package if necessary
-if(!"devtools" %in% rownames(installed.packages())) install.packages("devtools")
-
-# Install the stable development verions from GitHub
-devtools::install_github("crsh/papaja")
-```
-
-Indeed, once papaja is installed - you simply have to select the APA template before you enter your rmarkdown, as illustrated below:
-
-```{r, echo = FALSE, out.width = "60%", cap = "apaTables paper header"}
-knitr::include_graphics("ch_tools/images/papaja_template.png")
-```
-
-## apaTables
-
-If you don't want to learn rmarkdown you may find the [apaTables](https://cran.r-project.org/package=apaTables) package useful - it can easily create the most commonly used APA tables formatted for Microsoft Word. The [documentation](https://dstanley4.github.io/apaTables/articles/apaTables.html) has extensive examples.  You can also see the published guide by @stanley2018reproducible.
-
-```{r, echo = FALSE, out.width = "60%", cap = "apaTables paper header"}
-knitr::include_graphics("ch_tools/images/apaTables_paper.png")
-```
 
 ## Retracted articles
 
