--- a/14-deep_sampling.Rmd
+++ b/14-deep_sampling.Rmd
@@ -15,35 +15,56 @@ Now imagine that we are interested in studying the random sampling process. Spec
 Typically, in psychology, when we use the word population we are referring to a population of people - such as those illustrated in Figure 1A. However, in statistics, a population is simply set of elements (often people) about which we wish to draw conclusions. In this chapter, we shift our focus from thinking of the distribution of people in Figure 1A as a population to also thinking of the distribution of sample mean in Figure 1B as a population.  Doing so may seem counter intuitive but it the logical foundation for Analysis of Variance (ANOVA). 
 
 ### Distribution of sample means as a population
-Thus, in this chapter, we can think of there being a population of people and an imaginary population of sample means (each n = 25). The mean of the population people’s heights is calculated as below (where N = 50,000).
+Thus, in this chapter, we can think of there being a population of people and an imaginary population of sample means (each n = 25). The mean and variance of the population people’s heights is calculated as below (where N = 50,000).
 
-Show mean of formula for population. And plug in value.
+$$
+\begin{aligned} 
+\mu_{people} = \frac{\sum_{i=1}^{N=50000}{X_i}}{N}
+\end{aligned} 
+$$
 
-The mean of the population sample mean is calculated as below. To make things a bit easier to follow we use (a) instead of N to represent the number of sample means (Where A = infinity). 
+[plug in show value]
 
-Show formula for mean of sample means.
+$$
+\begin{aligned} 
+\sigma_{people}^2 = \frac{\sum_{i=1}^{N=50000}{(X_i - \bar{X})^2}}{N}
+\end{aligned} 
+$$
 
-You can see than the mean of the sample means (I.e., the mean of the distribution in Figure 1B) will always be the same as that of the individuals heights (Figure 1A).
 
-Consequently, any conclusions we make about population means based on Figure 1B will also apply to Figure 1A. This is a crucial point to keep in mind as we proceed through this chapter. Although we are ultimately interested in making conclusion about the mean of the people - all our work in this chapter (and in ANOVA) is based on the distribution of sample mean in Figure 1B. We just need to remember that our conclusion will also apply to Figure 1A because the mean of Figure 1A and Figure 1B will always be the same.
+But in this chapter, our focus is on the distribution of sample means. The mean of the population sample means is calculated as below. To make things a bit easier to follow we use $A$ instead of $N$ to represent the number of sample means (where $A$ = infinity, because there are an infinite number of sample means in the distribution). I know it doesn't make sense the divided by infinity per se - in formal mathematics we would write this up in a different way describing things in terms of *expected value*.
+
+$$
+\begin{aligned} 
+\mu_{\bar{x}} = \frac{\sum_{i=1}^{A=\infty}{\bar{x}_i}}{A}
+\end{aligned} 
+$$
+
+The mean of the sample means, \mu_{\bar{x}}, will always be the same as that of the individuals heights, \mu_{people}. Consequently, any conclusions we make about population means based on Figure 1B will also apply to Figure 1A. This is a crucial point to keep in mind as we proceed through this chapter. Although we are ultimately interested in making conclusion about the mean of the people - all our work in this chapter (and in ANOVA) is based on the distribution of sample mean in Figure 1B. We just need to remember that our conclusion will also apply to Figure 1A because the mean of Figure 1A and Figure 1B will always be the same.
 
 ## Variance of the distribution of sampling means
 
 **When there is only population mean** there are two approaches ways to calculate the variances of the distribution of sample means. 
 
-###Calculate the variance of infinite sample means
+### Calculate the variance of infinite sample means
 
 In this first approach, we use an infinite number of sample means and simply calculate the variance. Obviously, this is an impractical solution because we could never have calculate the variance with an infinite number of sample means. Conceptually, however, it’s good to keep this calculation approach in mind - since it reminds us of principles we’ve already learned about the variance of populations. 
 
-(Show calculation is A in the denominator)
+$$
+\begin{aligned} 
+\sigma_{\bar{x}}^2 = \frac{\sum_{i=1}^{A=\infty}{(\bar{x}_i - \bar{\bar{x}})^2}}{A}
+\end{aligned} 
+$$
 
-Notice how this is similar to population formula when we are dealing with people we just use A in stead of N.
-
-When there is only one population this formula will reflect varibiltiy in sample means due to random sampling. When there is more than one population - it becomes more complicated. We’ll discuss that in more in future dchapters.
+Notice how this is similar to population formula when we are dealing with people we just use $A$ in stead of $N$. When there is only one population this formula will reflect varibiltiy in sample means due to random sampling. When there is more than one population - it becomes more complicated. We’ll discuss that in more in future dchapters.
 
 ### CLT Shortcut with variance and sample size
 
-(Show calculation using CLT short cut)
+$$
+\begin{aligned} 
+\sigma_{\bar{x}}^2 = \frac{\sigma_{people}^2}{n}
+\end{aligned} 
+$$
 
 This approach is unrealististic because we never know sigma2.
 It’s helpful moving forward to think of this formula as representing the variability due to random sample. No matter the situation - this formula will always reflect the variabilty in sample means due ONLY to random sampling.
