--- a/14-deep_sampling.Rmd
+++ b/14-deep_sampling.Rmd
@@ -572,7 +572,7 @@ ggplot(data = data_ratios3, mapping = aes(x = var_ratio)) +
   geom_vline(xintercept = 3.88, color = "blue", size = 1) +
   scale_x_continuous(breaks = seq(0,10, by = .5)) +
   coord_cartesian(xlim = c(0,10), ylim = c(0, 40000)) +
-  xlab("Variance Ratio: (approach_1_obs_var / approach_2_expected_var") +
+  xlab("Variance Ratio: (approach_1_obs_var / approach_2_expected_var)") +
   ylab("Frequency") +
   theme_classic()
 ```
